--- a/.github/workflows/testbench.yml
+++ b/.github/workflows/testbench.yml
@@ -1,6 +1,6 @@
 ---
 env:
-  TESTBENCH_ENTITY: sevenSegDecoder
+  TESTBENCH_ENTITY: thunderbird_fsm
 
 name: GHDL Testbench
 on: [push]
@@ -21,19 +21,19 @@ jobs:
       - run: ghdl elaborate -v ${TESTBENCH_ENTITY}_tb
       - run: ghdl run -v ${TESTBENCH_ENTITY}_tb
 
-  Instructor-Testbench:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup GHDL nightly
-        uses: ghdl/setup-ghdl-ci@nightly
-        with:
-          backend: llvm
-      - run: ghdl --version
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: cat .github/testfile | base64 -d > src/hdl/${TESTBENCH_ENTITY}_tb.vhd
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}.vhd
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}_tb.vhd
-      - run: ls -R
-      - run: ghdl elaborate -v ${TESTBENCH_ENTITY}_tb
-      - run: ghdl run -v ${TESTBENCH_ENTITY}_tb
+  # Instructor-Testbench:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Setup GHDL nightly
+  #       uses: ghdl/setup-ghdl-ci@nightly
+  #       with:
+  #         backend: llvm
+  #     - run: ghdl --version
+  #     - name: Check out repository code
+  #       uses: actions/checkout@v3
+  #     - run: cat .github/testfile | base64 -d > src/hdl/${TESTBENCH_ENTITY}_tb.vhd
+  #     - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}.vhd
+  #     - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}_tb.vhd
+  #     - run: ls -R
+  #     - run: ghdl elaborate -v ${TESTBENCH_ENTITY}_tb
+  #     - run: ghdl run -v ${TESTBENCH_ENTITY}_tb
