--- a/.github/workflows/testbench.yml
+++ b/.github/workflows/testbench.yml
@@ -16,26 +16,12 @@ jobs:
       - run: ghdl --version
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}.vhd
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}_tb.vhd
+      - run: |
+          for file in src/hdl/*.vhd; do
+            if [ -f "$file" ]; then
+             ghdl analyze -v "$file"
+            fi
+          done
       - run: ls -R
       - run: ghdl elaborate -v ${TESTBENCH_ENTITY}_tb
-      - run: ghdl run -v ${TESTBENCH_ENTITY}_tb  --stop-time=1us
-
-  Instructor-Testbench:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Setup GHDL nightly
-        uses: ghdl/setup-ghdl-ci@nightly
-        with:
-          backend: llvm
-      - run: ghdl --version
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: cat .github/testfile | base64 -d > src/hdl/${TESTBENCH_ENTITY}_tb.vhd
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}.vhd
-      - run: ghdl analyze -v src/hdl/${TESTBENCH_ENTITY}_tb.vhd
-      - run: ls -R
-      - run: ghdl elaborate -v ${TESTBENCH_ENTITY}_tb
-      - run: ghdl run -v ${TESTBENCH_ENTITY}_tb  --stop-time=1us
+      - run: ghdl run -v ${TESTBENCH_ENTITY}_tb  --stop-time=1us --assert-level=error
